@@ -161,11 +161,11 @@
   </autotools>
 
  <autotools id="harfbuzz" autogen-sh="configure">
-   <branch module="software/harfbuzz/release/harfbuzz-0.9.6.tar.bz2" version="0.9.6"
-           checkoutdir="harfbuzz-0.9.6"
+   <branch module="software/harfbuzz/release/harfbuzz-0.9.7.tar.bz2" version="0.9.7"
+           checkoutdir="harfbuzz-0.9.7"
            repo="freedesktop.org"
-           hash="sha256:394a849d6061993018754b0cc04110891ad215e3df3f6953b75dcc55a11f9d9b"
-           md5sum="f3a100a0512c185b211a0deb4790c34c">
+           hash="sha256:bd2999859f8828461fedae23e4af52d926ac32a73245f03ae2d2065205e9cf25"
+           md5sum="db5382728a912352633d3be2e2a1d988">
      <patch file="harfbuzz-icu-detection-fix.patch" strip="1" />
    </branch>
  </autotools>
